# cppcoro

./: CMakeLists.txt
include/cppcoro/: async_auto_reset_event.hpp  async_generator.hpp  async_manual_reset_event.hpp  async_mutex.hpp  async_scope.hpp  coroutine.hpp  file.hpp  fmap.hpp  generator.hpp  inline_scheduler.hpp  io_service.hpp  multi_producer_sequencer.hpp  read_only_file.hpp  read_write_file.hpp  recursive_generator.hpp  round_robin_scheduler.hpp  sequence_barrier.hpp  shared_task.hpp  single_consumer_async_auto_reset_event.hpp  single_consumer_event.hpp  single_producer_sequencer.hpp  static_thread_pool.hpp  task.hpp  write_only_file.hpp
include/cppcoro/detail/: is_awaiter.hpp  sync_wait_task.hpp  when_all_counter.hpp  when_all_ready_awaitable.hpp  when_all_task.hpp  win32_overlapped_operation.hpp
lib/: async_auto_reset_event.cpp  async_manual_reset_event.cpp  async_mutex.cpp  file.cpp  io_service.cpp  read_only_file.cpp  read_write_file.cpp  static_thread_pool.cpp  write_only_file.cpp
test/: file_tests.cpp  static_thread_pool_tests.cpp
